# ibssa2

./: .gitignore  ChangeLog  IB SA Scalability Arch.pptx  IB_SA_Scalability_Arch.odp  Makefile.am  README.md  SCSA IB SA Scalability Arch.pptx  SSA - Access Layer.docx  SSA-wireup.odg  TODO  Timings.ods  autogen.sh  configure.ac  configure.in  ibssa.spec.in  issues.txt  master-conf-build.sh  notes.txt  ssa_release_notes.txt  ssaaccesslayer.spec.in
access/: AUTHORS  Makefile.am  README  README.md  autoclean.sh  configure.ac  notes.txt
access/include/: ssa_log.h  ssa_path_record_data.h  ssa_path_record_helper.h
access/include/infiniband/: ssa_mad.h
access/src/: ssa_db_helper.c  ssa_path_record.c  ssa_path_record_data.c  ssa_path_record_data.h  ssa_path_record_helper.c  ssa_path_record_helper.h  ssa_prdb.c
access/tests/helper/: Makefile.am
acm/: AUTHORS  Makefile.am  README  acm_notes.txt  configure.ac  configure.in  ibacm.init.in  ibacm.spec.in  ibacm_addr.cfg  ibacm_addr.data  ibacm_hosts.data  ibacm_logrotate  ibacm_opts.cfg  ssa_release_notes.txt
acm/include/: acm_neigh.h  acm_shared.h  ibssa_mad.h  ibssa_umad.h  osd.h  ssa_ctrl.h
acm/include/infiniband/: acm.h  ssa_db.h  ssa_prdb.h
acm/linux/: osd.h
acm/man/: ib_acme.1  ibacm.1  ibacm.7
acm/src/: acm.c  acm_mad.h  acm_neigh.c  acm_util.c  acm_util.h  acme.c  libacm.c  parse.c  parse_addr.c  ssa.c  ssa_db.c  ssa_log.c
admin/: AUTHORS  Makefile.am  README  configure.ac  ssadmin.spec.in
admin/include/: common.h
admin/man/: ssadmin.1
admin/src/: admin.c  libadmin.c  libadmin.h
design-docs/: OpenSM_Scalable_SA_Plugin.odp  README  SSA-wireup.odg  ibacm-SSA-startup.odp  meeting-notes.txt  notes.txt  ssa_db.pptx  ssa_overview.pptx  ssa_setup_states.odg
design-docs/presentations/: OpenSM_Scalable_SA_Plugin.odp  SSA_FaultHandling.doc  SSA_Tree-Susans-White-board.odg  Scalable SA OFA Project.pptx
design-docs/presentations/database/: ssa_db.pptx
design-docs/presentations/plugin/: OpenSM Plugins.pptx  smdb_states.odg
design-docs/research/: DB-visual.odg  SSA-wireup.odg  Timings.ods
distrib/: AUTHORS  Makefile.am  README  configure.ac  configure.in  ibssa.init.in  ibssa.spec.in  ibssa_distrib.spec.in  ibssa_opts.cfg
distrib/include/infiniband/: ssa_smdb.h
distrib/man/: ibssa.1  ibssa.7
distrib/src/: distrib.c
ibssaquery/src/: ibssaquery.c
ibssautil/: Makefile.am
ibssautil/src/: ibssaclient.c  ibssaclient.h  ibssautil.c
include/: common.h  dlist.h  ibssa_control.h  ibssa_db.h  ibssa_helper.h  ibssa_mad.h  ibssa_tot_vs_mad.h  ibssa_umad.h  ibssa_wireup.h  osd.h  ref_count.h  ssa_admin.h  ssa_ctrl.h  ssa_log.h
include/infiniband/: acm.h  ssa.h  ssa_db.h  ssa_db_helper.h  ssa_ipdb.h  ssa_mad.h  ssa_path_record.h  ssa_prdb.h  ssa_smdb.h
master/: README
plugin/: AUTHORS  Makefile.am  README  configure.ac  configure.in  ibssa.spec.in  ibssa_core_opts.cfg  ibssa_logrotate  ibssa_opts.cfg  libopensmssa.map  libopensmssa.spec.in  master-conf-build.sh
plugin/etc/: opensmssa.conf.in
plugin/include/: dlist.h  ref_count.h
plugin/include/infiniband/: osm_headers.h  ssa_comparison.h  ssa_database.h  ssa_db_helper.h  ssa_extract.h  ssa_ipdb.h  ssa_smdb_api.h
plugin/man/: opensmssa.7
plugin/src/: core.c  ibssa_osm_pi_mad.c  ibssa_osm_pi_mad.h  ibssa_osm_plugin.c  ibssa_osm_plugin.h  ibssa_pi_config.c  ibssa_pi_config.h  ibssa_pi_log.h  osm_headers.h  osm_pi_config.c  osm_pi_config.h  osm_pi_log.h  osm_pi_mad.c  osm_pi_mad.h  osm_pi_main.c  osm_pi_main.h  saa_database.h  ssa_comparison.c  ssa_database.c  ssa_extract.c  ssa_ipdb.c  ssa_path_record_helper.c  ssa_smdb.c
plugin/test/: README
shared/: common.c  parse_addr.c  ssa.c  ssa_db.c  ssa_db_helper.c  ssa_ipdb.c  ssa_log.c  ssa_runtime_counters.c  ssa_runtime_stats.c  ssa_signal_handler.c
src/: ssa_path_record.c  ssa_path_record.h  ssa_path_record_data.c  ssa_path_record_data.h  ssa_path_record_helper.c  ssa_path_record_helper.h  ssa_prdb.c  ssa_prdb.h
tests/: Makefile.am  autoclean.sh  autogen.sh  configure.ac  ssa_tests.spec.in
tests/helper/: helper.c
tests/include/: acm_shared.h  ssa_admin.h  ssa_path_record_data.h  ssa_path_record_helper.h
tests/include/infiniband/: osm_headers.h  ssa.h  ssa_path_record.h  ssa_smdb_api.h
tests/loadsave/: Makefile.am  loadsave.c  ssa_runtime_stats.c
tests/pr_pair/: Makefile.am  helper.c  pr_dump_transform.py  pr_pair.c  ssa_path_record.c  ssa_path_record_data.c  ssa_prdb.c  ssa_runtime_counters.c  ssa_smdb.c
tests/utils/: Makefile.am  common.c  hosts2prdb.c  prdb2hosts.c  ssa_signal_handler.c
